Renamed "fields" api to "search" api.
