# api/data_explorer/swagger/swagger.yaml
@@ -55,28 +55,28 @@ paths:
           schema:
             $ref: "#/definitions/FacetsResponse"
       x-swagger-router-controller: "data_explorer.controllers.facets_controller"
-  /fields:
+  /search:
     get:
       tags:
-      - "Fields"
-      description: "Returns dataset fields for field search."
-      operationId: "fields_get"
+      - "Search"
+      description: "Free text search over dataset"
+      operationId: "search_get"
       parameters: []
       responses:
         200:
           description: "Success"
           schema:
-            $ref: "#/definitions/FieldsResponse"
-      x-swagger-router-controller: "data_explorer.controllers.fields_controller"
+            $ref: "#/definitions/SearchResponse"
+      x-swagger-router-controller: "data_explorer.controllers.search_controller"
   /exportUrl:
     post:
       tags:
       - "ExportUrl"
       description: "Creates and returns a signed URL to a GCS zip file of JSON files.\
-        \ The JSON files represent entities to be exported to a Saturn workspace.\
-        \ https://bvdp-saturn-prod.appspot.com/#import-data may be called with the\
-        \ url parameter set to this url. For each JSON file, https://rawls.dsde-prod.broadinstitute.org/#!/entities/create_entity\
-        \ may be called with the JSON as the POST body.\n"
+        \ The JSON files represent entities to be exported to a Terra workspace. https://bvdp-saturn-prod.appspot.com/#import-data\
+        \ may be called with the url parameter set to this url. For each JSON file,\
+        \ https://rawls.dsde-prod.broadinstitute.org/#!/entities/create_entity may\
+        \ be called with the JSON as the POST body.\n"
       operationId: "export_url_post"
       parameters:
       - in: "body"
@@ -174,16 +174,16 @@ definitions:
       authorization_domain:
         type: "string"
         description: "Optional FireCloud authorization domain"
-    description: "Information for sending data to Saturn"
+    description: "Information for sending data to Terra"
     example:
       authorization_domain: "authorization_domain"
       url: "url"
-  FieldsResponse:
+  SearchResponse:
     properties:
       fields:
         type: "array"
         items:
-          $ref: "#/definitions/Field"
+          $ref: "#/definitions/SearchResult"
     description: "Dataset fields for field search."
     example:
       fields:
@@ -193,7 +193,7 @@ definitions:
       - name: "name"
         description: "description"
         elasticsearch_name: "elasticsearch_name"
-  Field:
+  SearchResult:
     properties:
       name:
         type: "string"
